Creato con Colab

--- a/titanic_project_python/main.ipynb
+++ b/titanic_project_python/main.ipynb
@@ -83,12 +83,12 @@
         "id": "bbb7da64-be7b-4053-a22d-8540b5545133"
       },
       "source": [
-        "# 1. Loading and Inspecting the Dataset."
+        "# 1_Loading and Inspecting the Dataset."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "b210afa0-6e5f-43d5-9241-72dc3ea8cc7f",
       "metadata": {
         "colab": {
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "4751934d-6c82-4dea-8b28-15257e5c39c2",
       "metadata": {
         "colab": {
@@ -521,7 +521,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "42cace81-7838-47d1-955d-8ffa7320f17f",
       "metadata": {
         "colab": {
@@ -922,7 +922,7 @@
         "id": "8db9faee-0d47-4aa5-902b-19ba4f0fb056"
       },
       "source": [
-        "# 2. Inspecting the structure of the dataset."
+        "# 2_Inspecting the structure of the dataset."
       ]
     },
     {
@@ -1097,7 +1097,7 @@
         "id": "080e5006-df11-4a33-b979-1bf1fd2d274c"
       },
       "source": [
-        "# 3. Cleaning the Dataset"
+        "# 3_Cleaning the Dataset"
       ]
     },
     {
@@ -1499,7 +1499,7 @@
         "id": "7732ce75-6b05-42f9-9613-8f3b48d92067"
       },
       "source": [
-        "# 4. Statistical description of the DataFrame"
+        "# 4_Statistical description of the DataFrame"
       ]
     },
     {
@@ -3936,7 +3936,8 @@
       "version": "3.11.7"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     }
   },
   "nbformat": 4,
