Creato con Colab

--- a/titanic_project_python/main.ipynb
+++ b/titanic_project_python/main.ipynb
@@ -1088,7 +1088,7 @@
         "        else:\n",
         "            raise ValueError(f\"Column '{column}' is not numerical or does not exist in the DataFrame.\")\n",
         "\n",
-        "    # Loop through selected numerical columns\n",
+        "    # Loop through selected numerical columns #\n",
         "    for col in cols_to_process:\n",
         "        Q1 = df[col].quantile(lower_q)\n",
         "        Q3 = df[col].quantile(upper_q)\n",
