Creato con Colab

--- a/titanic_project_python/main.ipynb
+++ b/titanic_project_python/main.ipynb
@@ -7,7 +7,7 @@
         "id": "0afca7eb-e39c-46a4-b47f-9e6091bb82e7"
       },
       "source": [
-        "# I. DATA ANALYSIS : TITANIC"
+        "# DATA ANALYSIS : TITANIC"
       ]
     },
     {
@@ -18,16 +18,18 @@
       },
       "source": [
         "Dataset Description\n",
+        "\n",
         "Overview\n",
+        "\n",
         "The data has been split into two groups:\n",
         "\n",
-        "training set (train.csv)\n",
-        "test set (test.csv)\n",
-        "The training set should be used to build your machine learning models. For the training set, we provide the outcome (also known as the “ground truth”) for each passenger. Your model will be based on “features” like passengers’ gender and class. You can also use feature engineering to create new features.\n",
+        "    training set (train.csv)\n",
+        "    test set (test.csv)\n",
+        "The training set should be used to build your machine learning models. For the training set, we provide the outcome **(also known as the “ground truth”)** for each passenger. Your model will be based on “features” like passengers’ gender and class. You can also use feature engineering to create new features.\n",
         "\n",
         "The test set should be used to see how well your model performs on unseen data. For the test set, we do not provide the ground truth for each passenger. It is your job to predict these outcomes. For each passenger in the test set, use the model you trained to predict whether or not they survived the sinking of the Titanic.\n",
         "\n",
-        "We also include gender_submission.csv, a set of predictions that assume all and only female passengers survive, as an example of what a submission file should look like."
+        "We also include **gender_submission.csv**, a set of predictions that assume all and only female passengers survive, as an example of what a submission file should look like."
       ]
     },
     {
@@ -37,17 +39,17 @@
         "id": "9cea870b-9187-4237-a292-490a9526245f"
       },
       "source": [
-        "Variable   Definition\t                                  Key\n",
-        "survival   Survival\t                                      0 = No, 1 = Yes\n",
-        "pclass\t   Ticket class\t                                  1 = 1st, 2 = 2nd, 3 = 3rd\n",
-        "sex\t       Sex\n",
-        "Age\t       Age in years\n",
-        "sibsp\t   # of siblings / spouses aboard the Titanic\n",
-        "parch\t   # of parents / children aboard the Titanic\n",
-        "ticket\t  Ticket number\n",
-        "fare\t  Passenger fare\n",
-        "cabin\t  Cabin number\n",
-        "embarked  Port of Embarkation\t                         C = Cherbourg, Q = Queenstown, S = Southampton"
+        "    Variable     Definition\t                                   Key\n",
+        "    survival     Survival\t                                     0 = No, 1 = Yes\n",
+        "    pclass\t   Ticket class\t                                 1 = 1st, 2 = 2nd, 3 = 3rd\n",
+        "    sex\t      Sex\n",
+        "    Age\t      Age in years\n",
+        "    sibsp\t    # of siblings / spouses aboard the Titanic\n",
+        "    parch\t    # of parents / children aboard the Titanic\n",
+        "    ticket\t   Ticket number\n",
+        "    fare\t     Passenger fare\n",
+        "    cabin\t    Cabin number\n",
+        "    embarked     Port of Embarkation\t                          C = Cherbourg, Q = Queenstown, S = Southampton"
       ]
     },
     {
