Creato con Colab

--- a/titanic_project_python/main.ipynb
+++ b/titanic_project_python/main.ipynb
@@ -1818,12 +1818,12 @@
         "data_mis_val_perc"
       ],
       "metadata": {
-        "id": "1AQtPLWmg4iT",
-        "outputId": "739ac095-1609-46af-c0fb-87acd33db300",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 478
-        }
+        },
+        "id": "1AQtPLWmg4iT",
+        "outputId": "739ac095-1609-46af-c0fb-87acd33db300"
       },
       "id": "1AQtPLWmg4iT",
       "execution_count": 243,
@@ -1948,12 +1948,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "k_vynZY8hNJa",
-        "outputId": "0a014e10-ccf4-4bde-cbf6-b54fece7cb24",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 614
-        }
+        },
+        "id": "k_vynZY8hNJa",
+        "outputId": "0a014e10-ccf4-4bde-cbf6-b54fece7cb24"
       },
       "id": "k_vynZY8hNJa",
       "execution_count": 144,
@@ -1981,12 +1981,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "p12K57cQh71l",
-        "outputId": "9eb0fb33-a857-4571-ee28-d652e9e42415",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 634
-        }
+        },
+        "id": "p12K57cQh71l",
+        "outputId": "9eb0fb33-a857-4571-ee28-d652e9e42415"
       },
       "id": "p12K57cQh71l",
       "execution_count": 244,
@@ -2172,11 +2172,11 @@
         "data_dup_rows_ind"
       ],
       "metadata": {
-        "id": "69uulbXYeH6A",
-        "outputId": "c3caea4a-e607-42b2-9cd2-3f63b6a3e2ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "69uulbXYeH6A",
+        "outputId": "c3caea4a-e607-42b2-9cd2-3f63b6a3e2ee"
       },
       "id": "69uulbXYeH6A",
       "execution_count": 249,
@@ -2229,12 +2229,12 @@
         "df_data_dup"
       ],
       "metadata": {
-        "id": "bsvYTPKmerPS",
-        "outputId": "27ff80cb-e8b1-4639-ac49-56e56dd84e9a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 89
-        }
+        },
+        "id": "bsvYTPKmerPS",
+        "outputId": "27ff80cb-e8b1-4639-ac49-56e56dd84e9a"
       },
       "id": "bsvYTPKmerPS",
       "execution_count": 250,
@@ -2534,91 +2534,71 @@
         "id": "e6049156-f624-4825-846b-fca33a626abc"
       },
       "source": [
-        "## 3.1. Cleaning method 1: Removing duplicates rows\n",
-        " ."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "8a67efb6-1bd2-4aff-b06e-6a1e36091a7f",
-      "metadata": {
-        "id": "8a67efb6-1bd2-4aff-b06e-6a1e36091a7f"
-      },
-      "source": [
-        "### 3.2.1. Remove Duplicate Rows"
+        "## 3.1. Cleaning Method 1: Removing Duplicate Rows .\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 239,
+      "execution_count": 256,
       "id": "71c541ed-2f27-4aff-bb2e-3240b158aba7",
       "metadata": {
         "id": "71c541ed-2f27-4aff-bb2e-3240b158aba7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bf9e56c6-e49c-40a6-c1a0-f119b49f19c2"
+        "outputId": "5bd5684c-ae28-4045-fbdb-b2016ac71fac"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Number of duplicate rows identified: 0\n",
             "No duplicate rows found in the dataset.\n"
           ]
         }
       ],
       "source": [
         "# Show the first few duplicate rows (if any)\n",
-        "if not data_duplicates.empty:\n",
-        "    print(\"First 5 duplicate rows:\")\n",
-        "    print(data_duplicates.head())\n",
+        "if data.duplicated().any():\n",
+        "    print(\"Duplicate rows in the dataset:\")\n",
+        "    print(data[data.duplicated()])\n",
         "else:\n",
         "    print(\"No duplicate rows found in the dataset.\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 241,
+      "execution_count": 258,
       "id": "522340aa-a72b-4e12-9e0b-fe64fef408cd",
       "metadata": {
         "id": "522340aa-a72b-4e12-9e0b-fe64fef408cd",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 216
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "943dede1-c634-4f0c-ee6a-06d5ed5853f5"
+        "outputId": "6222bab4-539f-4818-b5d4-848f4f60495c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Number of rows before removing duplicates: 891\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'data_duplicated' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-241-9a9df7c6cb8a>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Compare the number of rows before and after removing duplicates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Number of rows before removing duplicates: {len(data)}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Number of duplicate rows identified: {data_duplicated().sum()}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Number of rows after removing duplicates: {len(data_cleaned1)}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'data_duplicated' is not defined"
+            "Number of rows before removing duplicates: 891\n",
+            "Number of duplicate rows identified: 0\n",
+            "Number of rows after removing duplicates: 891\n"
           ]
         }
       ],
       "source": [
-        "#  Removing duplicate rows\n",
+        "# Removing duplicate rows\n",
         "# ----------------------------------------\n",
         "# The .drop_duplicates() method removes all duplicate rows, keeping only the first occurrence.\n",
         "data_cleaned1 = data.drop_duplicates()\n",
         "\n",
         "# Compare the number of rows before and after removing duplicates\n",
+        "num_duplicates = len(data) - len(data_cleaned1)\n",
+        "\n",
         "print(f\"Number of rows before removing duplicates: {len(data)}\")\n",
-        "print(f\"Number of duplicate rows identified: {data_duplicated().sum()}\")\n",
+        "print(f\"Number of duplicate rows identified: {num_duplicates}\")\n",
         "print(f\"Number of rows after removing duplicates: {len(data_cleaned1)}\")\n"
       ]
     },
@@ -2629,7 +2609,7 @@
         "id": "93df5810-18ce-46cc-b0d3-dda561ab8d44"
       },
       "source": [
-        "### 3.2.2. Clean the Data by Removing Rows with missing values"
+        "## 3.2.Cleaning Method 2: Removing rows with missing values"
       ]
     },
     {
@@ -2818,19 +2798,19 @@
         "id": "b86336e4-9ad6-4956-a802-2469262c7988"
       },
       "source": [
-        "### 3.2.3. Clean the Data by Replacing Missing Values with the Mean."
+        "## 3.3. Cleaning Method 3: Replacing missing values using the mean."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": 259,
       "id": "bb0da706-c52f-4812-ac0b-9c47d2870fb5",
       "metadata": {
         "id": "bb0da706-c52f-4812-ac0b-9c47d2870fb5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "aa36245a-3fac-4acb-f6b6-6895dabcd4fd"
+        "outputId": "65e5d4f7-5749-4a3f-be57-71733287b712"
       },
       "outputs": [
         {
@@ -2863,7 +2843,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-158-5ef350fa1e2e>:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "<ipython-input-259-a1ccaa3e0c3b>:5: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -2875,7 +2855,9 @@
       ],
       "source": [
         "# Create data_cleaned4: Fill missing 'Age' values with its mean\n",
-        "data_cleaned4 = data_cleaned2.copy()  # Make a copy to avoid modifying data_cleaned2\n",
+        "# Make a copy to avoid modifying data_cleaned2\n",
+        "\n",
+        "data_cleaned4 = data_cleaned2.copy()\n",
         "data_cleaned4['Age'].fillna(data_cleaned4['Age'].mean(), inplace=True)\n",
         "\n",
         "# Compare the number of missing values in 'Age' before and after replacement\n",
@@ -2888,111 +2870,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 262,
       "id": "5e786c03-229e-4b15-989b-4eb1f07bc463",
       "metadata": {
         "id": "5e786c03-229e-4b15-989b-4eb1f07bc463",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 366
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c11af08c-805c-416a-e966-365e8894c1c8"
+        "outputId": "56857e2b-3c6d-4da8-9afb-967d102e7eef"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "PassengerId      int64\n",
-              "Survived         int64\n",
-              "Pclass           int64\n",
-              "Name            object\n",
-              "Sex             object\n",
-              "Age            float64\n",
-              "SibSp            int64\n",
-              "Parch            int64\n",
-              "Fare           float64\n",
-              "dtype: object"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>PassengerId</th>\n",
-              "      <td>int64</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Survived</th>\n",
-              "      <td>int64</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Pclass</th>\n",
-              "      <td>int64</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Name</th>\n",
-              "      <td>object</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Sex</th>\n",
-              "      <td>object</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Age</th>\n",
-              "      <td>float64</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>SibSp</th>\n",
-              "      <td>int64</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Parch</th>\n",
-              "      <td>int64</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Fare</th>\n",
-              "      <td>float64</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> object</label>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 159
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Final DataFrame after removing 'Age' values: (712, 9)\n",
+            "Final DataFrame after substituting 'Age' values: (891, 9)\n"
+          ]
         }
       ],
       "source": [
         "# In addition to the \"Cabin\" column, we copy \"data_cleaned3\",\n",
-        "# remove the \"Ticket\" and \"Embarked\" columns that we do not need for our analysis,\n",
-        "# and call our new DataFrame \"df\".\n",
+        "# remove the \"Ticket\" and \"Embarked\" columns, which are not needed for our analysis,\n",
+        "# and name the new DataFrame \"df\".\n",
         "df = data_cleaned3.copy()\n",
+        "\n",
+        "# DataFrame with substituted values for the \"Age\" variable\n",
+        "df_subs = data_cleaned4.copy()\n",
         "\n",
         "# Drop the \"Ticket\" and \"Embarked\" columns\n",
         "df.drop([\"Ticket\", \"Embarked\"], axis=1, inplace=True)\n",
+        "df_subs.drop([\"Ticket\", \"Embarked\"], axis=1, inplace=True)\n",
         "\n",
         "# Display the updated DataFrame\n",
-        "df.dtypes"
+        "print(f\"Final DataFrame after removing 'Age' values: {df.shape}\")\n",
+        "print(f\"Final DataFrame after substituting 'Age' values: {df_subs.shape}\")\n"
       ]
     },
     {
@@ -3007,7 +2919,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": 263,
       "id": "fdb7959d-ee34-478f-af56-cf39520a60c6",
       "metadata": {
         "id": "fdb7959d-ee34-478f-af56-cf39520a60c6",
@@ -3015,7 +2927,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 598
         },
-        "outputId": "7c3a534f-10a4-441f-ae29-7f36058f2485"
+        "outputId": "4bfe111b-9081-4d1b-8620-574dcbfe49bc"
       },
       "outputs": [
         {
@@ -3054,7 +2966,7 @@
         "id": "7732ce75-6b05-42f9-9613-8f3b48d92067"
       },
       "source": [
-        "# 4_Statistical description of the DataFrame"
+        "# 4.Exploratory Data Analysis (EDA)"
       ]
     },
     {
