Start machine learning jupiter notebook

--- a/titanic_streamlik/docs/data_analysis.ipynb
+++ b/titanic_streamlik/docs/data_analysis.ipynb
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "bxdTHFmGbWhr",
       "metadata": {
         "colab": {
@@ -228,6 +228,8 @@
         "# Original dataset source:  original_url = https://www.kaggle.com/competitions/titanic/data?select=train.csv\n",
         "\n",
         "# RAW URL of the modified CSV file on GitHub\n",
+        "try:\n",
+        "    url = \n",
         "url = \"https://raw.githubusercontent.com/FabriceGhislain7/data_analyst_scientist/main/titanic_project/data_titanic.csv\"\n",
         "\n",
         "# Load the dataset from GitHub\n",
